[package]
authors = ["Jonathan Creekmore <jonathan@thecreekmores.org>"]
description = "Parse and encode PEM-encoded data."
documentation = "https://docs.rs/pem/"
homepage = "https://github.com/jcreekmore/pem-rs.git"
license = "MIT"
name = "pem"
readme = "README.md"
repository = "https://github.com/jcreekmore/pem-rs.git"
version = "0.8.2-alpha.0"
categories = [ "cryptography" ]
edition = "2018"

[dependencies]
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx", tag = "sgx_1.1.1" }
once_cell = { git = "https://github.com/mesalock-linux/once_cell-sgx.git", tag = "sgx_1.1.1" }
regex = { version = "1", git = "https://github.com/mesalock-linux/regex-sgx", tag = "sgx_1.1.1" }
sgx_tstd = { rev = "v1.1.1", git = "https://github.com/apache/teaclave-sgx-sdk", optional = true }

[dev-dependencies]
# criterion = "0.3.0"

[[bench]]
name = "pem_benchmark"
harness = false

[badges]
travis-ci = { repository = "jcreekmore/pem-rs" }

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
